// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OverflowWrapper /> should render 1`] = `
<div>
  <div
    class="sc-bcXHqe keQCoM"
  >
    <div
      class="sc-gswNZR gCRuQd"
    >
      Default shadow color
    </div>
  </div>
</div>
`;

exports[`<OverflowWrapper /> should render with correct color 1`] = `
<div>
  <div
    class="sc-bcXHqe gzwJnu"
  >
    <div
      class="sc-gswNZR gCRuQd"
    >
      Red shadow color
    </div>
  </div>
</div>
`;
